<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HomeActivity"
    android:orientation="vertical"
    android:background="@android:color/white">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:src="@drawable/logo"
        android:layout_margin="20dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:paddingRight="8dp"
        android:paddingLeft="8dp">

        <android.support.v7.widget.CardView
            android:id="@id/home_materi"
            android:foreground="@drawable/select_custom"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="#fff"
            app:cardCornerRadius="5dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <TextView
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/home_materi"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:foreground="@drawable/select_custom"
            android:id="@id/home_hiragana"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/home_materi"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="#fff"
            app:cardCornerRadius="5dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_height="match_parent"
                    android:text="@string/home_hiragana"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:foreground="@drawable/select_custom"
            android:id="@id/home_katakana"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_below="@id/home_hiragana"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="#fff"
            app:cardCornerRadius="5dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_height="match_parent"
                    android:text="@string/home_katakana"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:foreground="@drawable/select_custom"
            android:id="@id/home_budaya"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/home_katakana"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="#fff"
            app:cardCornerRadius="5dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_height="match_parent"
                    android:text="@string/home_budaya"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:foreground="@drawable/select_custom"
            android:id="@id/home_profile"
            android:clickable="true"
            android:layout_width="250dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/home_budaya"
            android:layout_height="50dp"
            app:cardBackgroundColor="#fff"
            app:cardCornerRadius="5dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            android:focusable="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_height="match_parent"
                    android:text="@string/home_profile"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</LinearLayout>