<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:orientation="vertical"
    android:background="#F8F1CF">

    <ImageView
        android:layout_width="220dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo"/>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/background_login"
            android:layout_gravity="center_vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_user"
                android:layout_marginBottom="10dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@id/login_user_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint_username"
                android:background="@android:color/transparent"
                android:textColorHint="@android:color/black"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@id/login_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@android:color/black"
                    android:background="@android:color/transparent"/>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_login"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_password"
                android:layout_marginBottom="10dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@id/login_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/login_hint_password"
                android:textColorHint="@android:color/black"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black"
                    android:background="@android:color/transparent"
                    android:maxLines="1"/>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@id/login_button"
            android:layout_marginTop="10dp"
            android:text="@string/login_button"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button_border"/>

    </LinearLayout>
</LinearLayout>